[gd_scene load_steps=17 format=2]

[ext_resource path="res://UI/EnemyDetailsPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/NotificationPopup.gd" type="Script" id=2]
[ext_resource path="res://UI/DetailsPanel.gd" type="Script" id=3]
[ext_resource path="res://UI/EnemyFileMenu.gd" type="Script" id=4]
[ext_resource path="res://UI/UI Buttons/Minimize.gd" type="Script" id=5]
[ext_resource path="res://UI/EnemyTree.gd" type="Script" id=6]
[ext_resource path="res://UI/ItemDetailsPanel.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/Settings.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/Chat.tscn" type="PackedScene" id=9]
[ext_resource path="res://UI/Stages.gd" type="Script" id=10]
[ext_resource path="res://UI/Players.gd" type="Script" id=11]
[ext_resource path="res://UI/ItemTree.gd" type="Script" id=12]
[ext_resource path="res://UI/ItemFileMenu.gd" type="Script" id=13]

[sub_resource type="GDScript" id=2]
script/source = "extends CanvasLayer

signal stage_selected(stage_no)
signal player_activated(player_marker)

onready var stage_label: Label = $status_view/container/StageLabel
onready var coordinates_label: Label = $status_view/container/CoordinatesLabel

func _input(event):
	if event is InputEventMouseMotion:
		var mouse_pos : Vector2 = $\"../MapCoordinateSpace\".get_local_mouse_position();
		coordinates_label.text = String(mouse_pos.round())

func _on_Stages_item_selected(index: int) -> void:
	var stage_no = $left/tab/Stages.get_item_metadata(index)
	emit_signal(\"stage_selected\", stage_no)
	
	var stage_id = DataProvider.stage_no_to_stage_id(int(stage_no))
	if stage_id == -1:
		stage_label.text = \"Stage No. \" + stage_no
	else:
		stage_label.text = \"%s (ID: %s, Stage No. %s)\" % [tr(str(\"STAGE_NAME_\",stage_id)), stage_id, stage_no]
	
func _on_Players_item_activated():
	var player: PlayerMapEntity = $left/tab/Players.get_selected().get_metadata(0)
	emit_signal(\"player_activated\", player)

func _on_root_markers_loaded():
	$left/tab/Enemies/FileMenu._on_markers_loaded()
"

[sub_resource type="GDScript" id=3]
script/source = "extends Button

func _on_SettingsButton_pressed():
	$\"../../../SettingsWindowDialog\".popup_centered()
"

[sub_resource type="GDScript" id=1]
script/source = "extends PanelContainer

func _ready():
	visible = false

func _on_Close_pressed():
	visible = false
	
func _on_DetailsPanel_showing_details_of(obj):
	visible = obj != null
"

[node name="root" type="CanvasLayer"]
script = SubResource( 2 )

[node name="left" type="PanelContainer" parent="."]
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 45.0
margin_right = 320.0
margin_bottom = -4.0

[node name="tab" type="TabContainer" parent="left"]
margin_left = 7.0
margin_top = 7.0
margin_right = 303.0
margin_bottom = 544.0
tab_align = 0

[node name="Stages" type="ItemList" parent="left/tab"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 36.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 10 )

[node name="Enemies" type="VBoxContainer" parent="left/tab"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 36.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyFileMenu" type="MenuButton" parent="left/tab/Enemies"]
process_priority = 1
margin_right = 32.0
margin_bottom = 24.0
focus_mode = 2
size_flags_horizontal = 0
text = "File"
flat = false
align = 0
items = [ "New", null, 0, false, false, 0, 0, null, "", false, "Load", null, 0, false, false, 1, 0, null, "", false, "Save", null, 0, false, false, 2, 0, null, "", false ]
script = ExtResource( 4 )
file_dialog = NodePath("../../../../FileDialog")
notification_popup = NodePath("../../../../NotificationPopup")
enemy_tree = NodePath("../EnemyTree")

[node name="EnemyTree" type="Tree" parent="left/tab/Enemies"]
margin_top = 28.0
margin_right = 288.0
margin_bottom = 497.0
mouse_filter = 1
size_flags_vertical = 3
allow_reselect = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="VBoxContainer" parent="left/tab"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 36.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemFileMenu" type="MenuButton" parent="left/tab/Items"]
process_priority = 1
margin_right = 32.0
margin_bottom = 24.0
focus_mode = 2
size_flags_horizontal = 0
text = "File"
flat = false
align = 0
items = [ "New", null, 0, false, false, 0, 0, null, "", false, "Load", null, 0, false, false, 1, 0, null, "", false, "Save", null, 0, false, false, 2, 0, null, "", false ]
script = ExtResource( 13 )
file_dialog = NodePath("../../../../FileDialog")
notification_popup = NodePath("../../../../NotificationPopup")
item_tree = NodePath("../ItemTree")

[node name="ItemTree" type="Tree" parent="left/tab/Items"]
margin_top = 28.0
margin_right = 288.0
margin_bottom = 497.0
mouse_filter = 1
size_flags_vertical = 3
allow_reselect = true
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Players" type="Tree" parent="left/tab"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
hide_root = true
script = ExtResource( 11 )

[node name="RPCTimer" type="Timer" parent="left/tab/Players"]
wait_time = 5.0
autostart = true

[node name="Chat" parent="left/tab" instance=ExtResource( 9 )]
visible = false

[node name="status_view" type="PanelContainer" parent="."]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 44.0

[node name="container" type="HBoxContainer" parent="status_view"]
margin_left = 7.0
margin_top = 7.0
margin_right = 997.0
margin_bottom = 31.0

[node name="minimize" type="Button" parent="status_view/container"]
margin_right = 16.0
margin_bottom = 24.0
text = "-"
script = ExtResource( 5 )
control_to_minimize = NodePath("../../../left")
property_to_toggle = "visible"

[node name="LayerOptionButton" type="OptionButton" parent="status_view/container"]
margin_left = 20.0
margin_right = 91.0
margin_bottom = 24.0
text = "Layer 0"
items = [ "Layer 0", null, false, 0, null, "Layer 1", null, false, 1, null, "Layer 2", null, false, 2, null, "Layer 3", null, false, 3, null, "Layer 4", null, false, 4, null, "Layer 5", null, false, 5, null, "Layer 6", null, false, 6, null, "Layer 7", null, false, 7, null, "Layer 8", null, false, 8, null, "Layer 9", null, false, 9, null ]
selected = 0

[node name="StageLabel" type="Label" parent="status_view/container"]
margin_left = 95.0
margin_top = 3.0
margin_right = 261.0
margin_bottom = 21.0
text = "Stage Name (ID and Number)"

[node name="Spacer" type="Control" parent="status_view/container"]
margin_left = 265.0
margin_right = 854.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="CoordinatesLabel" type="Label" parent="status_view/container"]
margin_left = 858.0
margin_top = 3.0
margin_right = 927.0
margin_bottom = 21.0
text = "Coordinates"

[node name="SettingsButton" type="Button" parent="status_view/container"]
margin_left = 931.0
margin_right = 990.0
margin_bottom = 24.0
text = "Settings"
script = SubResource( 3 )

[node name="Right Panel" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -320.0
margin_top = 45.0
margin_right = -10.0
margin_bottom = -4.0
script = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Right Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 303.0
margin_bottom = 544.0

[node name="HBoxContainer" type="HBoxContainer" parent="Right Panel/VBoxContainer"]
margin_right = 296.0
margin_bottom = 24.0

[node name="TitleLabel" type="Label" parent="Right Panel/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 95.0
margin_bottom = 21.0
text = "Placeholder Title"

[node name="Control" type="Control" parent="Right Panel/VBoxContainer/HBoxContainer"]
margin_left = 99.0
margin_right = 253.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Minimize" type="Button" parent="Right Panel/VBoxContainer/HBoxContainer"]
margin_left = 257.0
margin_right = 273.0
margin_bottom = 24.0
text = "-"
script = ExtResource( 5 )
control_to_minimize = NodePath("../../..")

[node name="Close" type="Button" parent="Right Panel/VBoxContainer/HBoxContainer"]
margin_left = 277.0
margin_right = 296.0
margin_bottom = 24.0
text = "X"

[node name="DetailsPanel" type="Panel" parent="Right Panel/VBoxContainer" groups=["DetailsPanel"]]
margin_top = 28.0
margin_right = 296.0
margin_bottom = 537.0
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="EnemyDetailsPanel" parent="Right Panel/VBoxContainer/DetailsPanel" instance=ExtResource( 1 )]
title_label = NodePath("../../HBoxContainer/TitleLabel")

[node name="ItemDetailsPanel" parent="Right Panel/VBoxContainer/DetailsPanel" instance=ExtResource( 7 )]
title_label = NodePath("../../HBoxContainer/TitleLabel")

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -312.0
margin_top = -195.0
margin_right = 312.0
margin_bottom = 195.0
rect_min_size = Vector2( 180, 63 )
window_title = "Abrir un Archivo"
mode = 0
access = 2
filters = PoolStringArray( "*.csv ; CSV Files" )
show_hidden_files = true

[node name="NotificationPopup" type="PopupPanel" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -248.0
margin_top = -22.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="NotificationPopup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 240.0
margin_bottom = 22.0
text = "Notification"

[node name="SettingsWindowDialog" parent="." instance=ExtResource( 8 )]

[connection signal="item_selected" from="left/tab/Stages" to="." method="_on_Stages_item_selected"]
[connection signal="item_activated" from="left/tab/Players" to="." method="_on_Players_item_activated"]
[connection signal="timeout" from="left/tab/Players/RPCTimer" to="left/tab/Players" method="_on_rpc_timer_timeout"]
[connection signal="pressed" from="status_view/container/SettingsButton" to="status_view/container/SettingsButton" method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Right Panel/VBoxContainer/HBoxContainer/Close" to="Right Panel" method="_on_Close_pressed"]
[connection signal="showing_details_of" from="Right Panel/VBoxContainer/DetailsPanel" to="Right Panel" method="_on_DetailsPanel_showing_details_of"]
