[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/EnemyTree.gd" type="Script" id=1]
[ext_resource path="res://UI/FileMenu.gd" type="Script" id=2]
[ext_resource path="res://UI/Minimize.gd" type="Script" id=3]
[ext_resource path="res://UI/NotificationPopup.gd" type="Script" id=4]

[node name="UILayer" type="CanvasLayer"]

[node name="Left Panel" type="PanelContainer" parent="."]
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = 320.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Left Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 309.0
margin_bottom = 585.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Left Panel/VBoxContainer"]
margin_right = 302.0
margin_bottom = 20.0

[node name="MenuButton" type="MenuButton" parent="Left Panel/VBoxContainer/HBoxContainer"]
margin_right = 35.0
margin_bottom = 20.0
focus_mode = 2
text = "File"
items = [ "Load", null, 0, false, false, 0, 0, null, "", false, "Save", null, 0, false, false, 1, 0, null, "", false ]
script = ExtResource( 2 )
file_dialog = NodePath("../../../../FileDialog")
enemy_tree = NodePath("../../EnemyTree")
notification_popup = NodePath("../../../../NotificationPopup")

[node name="VSeparator" type="VSeparator" parent="Left Panel/VBoxContainer/HBoxContainer"]
margin_left = 39.0
margin_right = 281.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Minimize" type="Button" parent="Left Panel/VBoxContainer/HBoxContainer"]
margin_left = 285.0
margin_right = 302.0
margin_bottom = 20.0
text = "-"
script = ExtResource( 3 )
control_to_minimize = NodePath("../../..")

[node name="EnemyTree" type="Tree" parent="Left Panel/VBoxContainer"]
margin_top = 24.0
margin_right = 302.0
margin_bottom = 578.0
size_flags_vertical = 3
allow_reselect = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right Panel" type="PanelContainer" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -320.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Right Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 309.0
margin_bottom = 585.0

[node name="HBoxContainer" type="HBoxContainer" parent="Right Panel/VBoxContainer"]
margin_right = 302.0
margin_bottom = 20.0

[node name="VSeparator" type="VSeparator" parent="Right Panel/VBoxContainer/HBoxContainer"]
margin_right = 281.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Minimize" type="Button" parent="Right Panel/VBoxContainer/HBoxContainer"]
margin_left = 285.0
margin_right = 302.0
margin_bottom = 20.0
text = "-"
script = ExtResource( 3 )
control_to_minimize = NodePath("../../..")

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -312.0
margin_top = -195.0
margin_right = 312.0
margin_bottom = 195.0
rect_min_size = Vector2( 180, 63 )
window_title = "Abrir un Archivo"
mode = 0
access = 2
filters = PoolStringArray( "*.csv ; CSV Files" )
show_hidden_files = true
current_dir = "/Users/Laith/Documents/Programacion/Godot/DDOn Tools"
current_path = "/Users/Laith/Documents/Programacion/Godot/DDOn Tools/"

[node name="NotificationPopup" type="PopupPanel" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -248.0
margin_top = -22.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 4 )

[node name="Label" type="Label" parent="NotificationPopup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 240.0
margin_bottom = 18.0
text = "Notification"

[connection signal="gui_input" from="Left Panel/VBoxContainer/EnemyTree" to="Left Panel/VBoxContainer/EnemyTree" method="_on_gui_input"]
